处理中文乱码
更改dreamweaver 编码设置

--- a/index.htm
+++ b/index.htm
@@ -2,8 +2,8 @@
 "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>无标题文档</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<title>pig home</title>
 <style type="text/css">
 <!--
 body {
@@ -16,7 +16,7 @@ body {
 </style></head>
 
 <body>
-<p align="center" class="style1">pig home </p>
+<p align="center" class="style1">鐚尓涔愬洯</p>
 <table width="1600" border="1" align="center">
   <tr bgcolor="#00CCFF">
     <td width="159" height="40"><div align="center" class="style4"></div></td>
