--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>pig home</title>
+<title>猪猪乐园</title>
 <style type="text/css">
 <!--
 body {
@@ -40,7 +40,7 @@ body {
     <td width="159" height="40">&nbsp;</td>
     <td width="159" height="40">&nbsp;</td>
     <td width="159" height="40">&nbsp;</td>
-    <td width="159" height="40"><div align="center"><span class="style4"><a href="https://www.baidu.com/" target="_blank">baidu</a></span></div></td>
+    <td width="159" height="40"><div align="center"><span class="style4"><a href="https://www.baidu.com/" target="_blank">百度</a></span></div></td>
   </tr>
   <tr>
     <td width="159" height="40"><div align="center"><span class="style4"></span></div></td>
