--- a/index.htm
+++ b/index.htm
@@ -148,7 +148,7 @@ body {
     <td width="159" height="40">&nbsp;</td>
     <td width="159" height="40">&nbsp;</td>
     <td width="159" height="40">&nbsp;</td>
-    <td width="159" height="40">&nbsp;</td>
+    <td width="159" height="40"><div align="center"><a href="dlmm.htm">杂物间</a></div></td>
   </tr>
 </table>
 <p>&nbsp;</p>
