修改了一些链接

--- a/index.htm
+++ b/index.htm
@@ -58,7 +58,7 @@ body {
     <td width="159" height="40"><div align="center"><span class="style4"></span></div></td>
     <td width="159" height="40"><div align="center"><span class="style4"></span></div></td>
     <td width="159" height="40">&nbsp;</td>
-    <td width="159" height="40"><div align="center"><span class="style4"><a href="https://1luckypig.github.io">知乎</a></span></div></td>
+    <td width="159" height="40"><div align="center"><span class="style4"><a href="https://zhihu.com" target="_blank">知乎</a></span></div></td>
     <td width="159" height="40">&nbsp;</td>
     <td width="159" height="40">&nbsp;</td>
     <td width="159" height="40">&nbsp;</td>
@@ -70,7 +70,7 @@ body {
     <td width="159" height="40"><div align="center"><span class="style4"></span></div></td>
     <td width="159" height="40"><div align="center"><span class="style4"></span></div></td>
     <td width="159" height="40">&nbsp;</td>
-    <td width="159" height="40"><div align="center"><span class="style4"><a href="https://1luckypig.github.io">石墨文档</a></span></div></td>
+    <td width="159" height="40"><div align="center"><span class="style4"><a href="https://shimo.im/" target="_blank">石墨文档</a></span></div></td>
     <td width="159" height="40">&nbsp;</td>
     <td width="159" height="40"><div align="center"><span class="style4"></span></div></td>
     <td width="159" height="40"><div align="center"><span class="style4"></span></div></td>
@@ -82,7 +82,7 @@ body {
     <td width="159" height="40"><div align="center"><span class="style4"></span></div></td>
     <td width="159" height="40"><div align="center"><span class="style4"></span></div></td>
     <td width="159" height="40">&nbsp;</td>
-    <td width="159" height="40"><div align="center"><span class="style4"><a href="https://1luckypig.github.io">知识星球</a></span></div></td>
+    <td width="159" height="40"><div align="center"><span class="style4"><a href="https://wx.zsxq.com" target="_blank">知识星球</a></span></div></td>
     <td width="159" height="40">&nbsp;</td>
     <td width="159" height="40"><div align="center"><span class="style4"></span></div></td>
     <td width="159" height="40"><div align="center"><span class="style4"></span></div></td>
