--- a/index.htm
+++ b/index.htm
@@ -12,6 +12,7 @@ body {
 .style1 {font-size: 36px}
 .style3 {font-size: 20px}
 .style4 {font-size: 18px}
+.style2 {font-size: 12px}
 -->
 </style></head>
 
@@ -21,7 +22,7 @@ body {
   <tr bgcolor="#00CCFF">
     <td width="159" height="40"><div align="center" class="style4">网上购物</div></td>
     <td width="159" height="40"><div align="center" class="style4"><span class="style4"></span></div></td>
-    <td width="159" height="40"><span class="style4"></span></td>
+    <td width="159" height="40"><div align="center"><span class="style4">我的学习</span></div></td>
     <td width="159" height="40"><div align="center" class="style4">我的创作</div></td>
     <td width="159" height="40"><span class="style4"></span></td>
     <td width="159" height="40"><div align="center"><span class="style4">网上存储</span></div></td>
@@ -33,7 +34,7 @@ body {
   <tr>
     <td width="159" height="40"><div align="center" class="style4"><a href="https://www.taobao.com/" target="_blank">淘宝</a></div></td>
     <td width="159" height="40"><div align="center" class="style4"><span class="style4"></span></div></td>
-    <td width="159" height="40"><span class="style4"></span></td>
+    <td width="159" height="40"><div align="center"><span class="style4"><a href="https://appfkpnjfdx1492.h5.xiaoeknow.com/p/course/column/p_5cdcd1757e55b_zykx4ued?type=3&share_user_id=u_64494746631c4_suls8WLgUB&share_type=5&scene=&#37714;&#21973;&#38889;&entry=2&entry_type=2002" target="_blank">破相论</a></span></div></td>
     <td width="159" height="40"><div align="center"><span class="style4"><a href="https://www.jianshu.com/" target="_blank">简书</a></span></div></td>
     <td width="159" height="40"><span class="style4"></span></td>
     <td width="159" height="40"><div align="center"><span class="style4"><a href="https://pan.baidu.com/" target="_blank">百度网盘</a></span></div></td>
@@ -45,7 +46,7 @@ body {
   <tr>
     <td width="159" height="40"><div align="center"><span class="style4"><span class="style4"></span></span></div></td>
     <td width="159" height="40"><div align="center" class="style4"><span class="style4"></span></div></td>
-    <td width="159" height="40"><span class="style4"></span></td>
+    <td width="159" height="40"><div align="center"><span class="style4"><a href="https://appfkpnjfdx1492.h5.xiaoeknow.com/?share_user_id=u_5e3d5388bd9db_GYNAw6Iyuz&entry=2&entry_type=2001" target="_blank">七非先生</a></span></div></td>
     <td width="159" height="40"><div align="center"><span class="style4"><a href="https://www.wiz.cn/zh-cn" target="_blank">为知笔记</a></span></div></td>
     <td width="159" height="40"><span class="style4"></span></td>
     <td width="159" height="40"><span class="style4"></span></td>
@@ -57,7 +58,7 @@ body {
   <tr>
     <td width="159" height="40"><div align="center"><span class="style4"></span></div></td>
     <td width="159" height="40"><div align="center"><span class="style4"></span></div></td>
-    <td width="159" height="40">&nbsp;</td>
+    <td width="159" height="40"><div align="center"><span class="style2"><a href="https://www.sohu.com/a/394004995_120658321" target="_blank">都让我感到深深的耻辱</a></span></div></td>
     <td width="159" height="40"><div align="center"><span class="style4"><a href="https://zhihu.com" target="_blank">知乎</a></span></div></td>
     <td width="159" height="40">&nbsp;</td>
     <td width="159" height="40">&nbsp;</td>
@@ -69,7 +70,7 @@ body {
   <tr>
     <td width="159" height="40"><div align="center"><span class="style4"></span></div></td>
     <td width="159" height="40"><div align="center"><span class="style4"></span></div></td>
-    <td width="159" height="40">&nbsp;</td>
+    <td width="159" height="40"><div align="center"><span class="style2"><a href="&#19971;&#38750;&#20808;&#29983;&#65306;&#19982;&#20315;&#26377;&#20851;&#30340;&#19968;&#20999;&#65292;&#37117;&#35753;&#25105;&#24863;&#21040;&#28145;&#28145;&#30340;&#39556;&#20658;.docx" target="_blank">都让我感到深深的骄傲</a> </span></div></td>
     <td width="159" height="40"><div align="center"><span class="style4"><a href="https://shimo.im/" target="_blank">石墨文档</a></span></div></td>
     <td width="159" height="40">&nbsp;</td>
     <td width="159" height="40"><div align="center"><span class="style4"></span></div></td>
