--- a/0-1-a-佛经阁.htm
+++ b/0-1-a-佛经阁.htm
@@ -13,11 +13,13 @@ body {
 .style3 {font-size: 20px}
 .style4 {font-size: 18px}
 .style6 {color: #00FF00}
+.style7 {font-size: 9px}
 -->
 </style></head>
 
 <body>
-<p align="center" class="style1">猪猪乐园</p>
+<p align="center" class="style1">佛经阁</p>
+<p align="left" class="style7">0</p>
 <table width="1600" border="1" align="center">
   <tr bgcolor="#666666">
     <td width="20" rowspan="2"><div align="center" class="style6">序号</div></td>
@@ -33,62 +35,62 @@ body {
     <td height="2"><div align="center" class="style6">j</div></td>
   </tr>
   <tr bgcolor="#00CCFF">
-    <td width="155" height="40"><div align="center" class="style4">我的资源</div></td>
-    <td width="155" height="40"><div align="center" class="style4">我的网站</div></td>
-    <td width="155" height="40"><div align="center" class="style4">我的学习</div></td>
-    <td width="155" height="40"><div align="center" class="style4">我的创作</div></td>
-    <td width="155" height="40"><div align="center" class="style4">我的工作</div></td>
-    <td width="155" height="40"><div align="center" class="style4">网上存储</div></td>
-    <td width="155" height="40"><div align="center" class="style4">网上安全</div></td>
-    <td width="155" height="40"><div align="center" class="style4">网上购物</div></td>
-    <td width="155" height="40"><div align="center" class="style4">心灵成长</div></td>
-    <td width="155" height="40"><div align="center" class="style4">网站导航</div></td>
+    <td width="155" height="40">&nbsp;</td>
+    <td width="155" height="40">&nbsp;</td>
+    <td width="155" height="40">&nbsp;</td>
+    <td width="155" height="40">&nbsp;</td>
+    <td width="155" height="40">&nbsp;</td>
+    <td width="155" height="40">&nbsp;</td>
+    <td width="155" height="40">&nbsp;</td>
+    <td width="155" height="40">&nbsp;</td>
+    <td width="155" height="40">&nbsp;</td>
+    <td width="155" height="40">&nbsp;</td>
   </tr>
   <tr>
     <td width="20" bgcolor="#666666"><div align="center" class="style6">1</div></td>
-    <td width="155" height="40"><div align="center"><a href="0-1-a-&#20315;&#32463;&#38401;.htm" target="_blank">佛经阁</a></div></td>
+    <td width="155" height="40"><div align="center"><a href="0-1-a-&#20315;&#32463;&#38401;-001-&#26974;&#20005;&#32463;.htm">楞严经</a></div></td>
     <td height="40">&nbsp;</td>
-    <td height="40"><div align="center"><span class="style4"><a href="https://appgvxduqld1024.h5.xiaoeknow.com/p/decorate/homepage?share_user_id=u_5e6f7093cee56_KjtieEBn5C&entry=2&entry_type=2001" target="_blank">正心读书会</a></span></div></td>
-    <td width="159"><div align="center"><span class="style4"><a href="https://www.jianshu.com/" target="_blank">简书</a></span></div></td>
     <td height="40">&nbsp;</td>
-    <td height="40"><div align="center"><span class="style4"><a href="https://pan.baidu.com/" target="_blank">百度网盘</a></span></div></td>
+    <td width="159">&nbsp;</td>
     <td height="40">&nbsp;</td>
-    <td height="40"><div align="center"><span class="style4"><a href="https://www.taobao.com/" target="_blank">淘宝</a></span></div></td>
-    <td height="40"><div align="center"><span class="style4"><a href="https://www.cuiniyimian.com/mesmer" target="_blank">催你一眠</a></span></div></td>
-    <td width="159"><div align="center" class="style4"><a href="https://www.baidu.com/" target="_blank">百度</a></div></td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td width="159">&nbsp;</td>
   </tr>
   <tr>
     <td width="20" bgcolor="#666666"><div align="center" class="style6">2</div></td>
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
-    <td width="159"><div align="center"><span class="style4"><a href="https://www.wiz.cn/zh-cn" target="_blank">为知笔记</a></span></div></td>
+    <td width="159">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
-    <td width="159"><div align="center"><span class="style4"><a href="https://weixin.qq.com/" target="_blank">微信</a></span></div></td>
+    <td width="159">&nbsp;</td>
   </tr>
   <tr>
     <td width="20" bgcolor="#666666"><div align="center" class="style6">3</div></td>
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
-    <td width="159"><div align="center"><span class="style4"><a href="https://zhihu.com" target="_blank">知乎</a></span></div></td>
+    <td width="159">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
-    <td width="159"><div align="center"><span class="style4"><a href="https://www.google.com/" target="_blank">谷歌</a></span></div></td>
+    <td width="159">&nbsp;</td>
   </tr>
   <tr>
     <td width="20" bgcolor="#666666"><div align="center" class="style6">4</div></td>
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
-    <td width="159"><div align="center"><span class="style4"><a href="https://shimo.im/" target="_blank">石墨文档</a></span></div></td>
+    <td width="159">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
@@ -101,7 +103,7 @@ body {
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
-    <td width="159"><div align="center"><span class="style4"><a href="https://wx.zsxq.com" target="_blank">知识星球</a></span></div></td>
+    <td width="159">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
@@ -177,8 +179,8 @@ body {
   <tr>
     <td width="20" bgcolor="#666666"><div align="center" class="style6">11</div></td>
     <td width="155" height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style4"></span></a></div></td>
-    <td width="155" height="40"><div align="center"><span class="style4"><a href="https://github.com/github/" target="_blank">github登入</a></span></div></td>
-    <td width="155" height="40"><div align="center"><span class="style4">我的书单</span></div></td>
+    <td width="155" height="40">&nbsp;</td>
+    <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style4"></span></a></div></td>
     <td width="155" height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style4"></span></a></div></td>
     <td width="155" height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style4"></span></a></div></td>
