更新读书笔记

--- a/2-1-a-我的读书笔记-001.htm
+++ b/2-1-a-我的读书笔记-001.htm
@@ -17,8 +17,8 @@ body {
 </style></head>
 
 <body>
-<p align="left" class="style2">猪猪乐园-读书笔记-bj001</p>
-<p align="center" class="style3">生命大自在</p>
+<p align="left" class="style2"><a href="index.htm" target="_self">猪猪乐园</a>-读书笔记-bj001 </p>
+<p align="center" class="style3">生命游戏（上）</p>
 <p align="center" class="style1">&nbsp;</p>
 <p align="left" class="style1">一、生命层次</p>
 <p align="left" class="style1">当人们想要努力改变自己的生活或者说生命状态时，人们可以在五个层面上努力。</p>
@@ -95,10 +95,15 @@ body {
 <p class="style1">7、大我设计模式</p>
 <p class="style1">8、大我管理能量，将其运用在模式上</p>
 <p class="style1">9、大我根据你决定进行人性游戏时所选择的人生目的和使命，来控制让哪些人、事、物、境会出现在你的全息幻象中。</p>
-<p class="style1">&nbsp;</p>
-<p class="style1">&nbsp;</p>
-<p class="style4">&nbsp;</p>
-<p align="left" class="style1">（本文的部分来自《你值得过更好的生活》一书）</p>
+<p class="style1"><span class="style4">八、人与人的互动</span></p>
+<p class="style1">人性游戏中如果只有一个人，肯定不真实，一点也不好玩，所以人性游戏里会出现很多很多的人一起玩。你可能很难相信，出现在你的全息游戏世界里的其他玩家，百分之百都是你的创造物。在你的全息游戏世界里，“大我”通过“剧本”赋予人们力量或自主权，帮助你展开人性游戏的旅程。</p>
+<p class="style1">请你确信这一点：不仅你的游戏世界里的所有人都是你（也就是你的“大我”）所创造，游戏世界里的一切都是你所创造的。请你确信这一点：你就是佛，你本自俱足。</p>
+<p class="style4">是不是你想做什么就做什么呢？反正你就是佛，一切都是你创造的，不是随心所欲吗？当然不是，游戏就是游戏的规则，就好比你玩电脑游戏，你加外挂，游戏规则就破坏了。两个球队踢球，你让一个球队队员为超人，那这个球赛就进行不了了。</p>
+<p class="style4">那游戏规则是谁创造的？是你（大我）创造的，但是创造游戏规则是有规则的！创造游戏规则的规则是另外的话题。</p>
+<p class="style4">你只需知道，因为全息游戏中的一切都是你的意识创造出来的，所以在全息游戏中，你绝对安全并受到庇护。别人绝对无法闯入你的全息世界，无法伤害你（或你关心的人）。在全息世界中，看起来有人伤害你，那只是因为你在能量场中以那些细节创造了一个模式，你灌注能量让这个幻象出现在你的全息世界中，让自己信以为真。尽管以第一阶段身为人格面具和个人体验式影视剧主角的受限观点来看，你会有种种评判，但其实你这么做的唯一理由就是完美地支持自己进行人性游戏。</p>
+<p class="style4">我们需要再次确认一下，“大我”在全息游戏中创造人、事、物、境的方法过程：</p>
+<p class="style4">“大我”在能量场中创造一个模式，并提供能量灌注到这个模式上，让这些人、事、物、境的幻象呈现出来。</p>
+<p align="left" class="style1">（本文部分内容来自《你值得过更好的生活》一书）</p>
 <p align="left" class="style1">&nbsp;</p>
 <p align="center" class="style1">&nbsp;</p>
 <p align="center" class="style1">&nbsp;</p>
