--- a/2-index - 读书笔记.htm
+++ b/2-index - 读书笔记.htm
@@ -33,7 +33,7 @@ body {
     <td height="2"><div align="center" class="style6">j</div></td>
   </tr>
   <tr bgcolor="#00CCFF">
-    <td width="155" height="40"><div align="center" class="style4">佛学笔记</div></td>
+    <td width="155" height="40"><div align="center" class="style4">生命大自在</div></td>
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
@@ -46,7 +46,7 @@ body {
   </tr>
   <tr>
     <td width="20" bgcolor="#666666"><div align="center" class="style6">1</div></td>
-    <td width="155" height="40"><div align="center" class="style4"><a href="1-1-a-&#25105;&#30340;&#35835;&#20070;&#31508;&#35760;-001.htm">生命大自在</a></div></td>
+    <td width="155" height="40"><div align="center" class="style4"><a href="2-1-a-&#25105;&#30340;&#35835;&#20070;&#31508;&#35760;-001.htm" target="_blank">生命游戏（上）</a></div></td>
     <td height="40">&nbsp;</td>
     <td height="40">&nbsp;</td>
     <td width="159">&nbsp;</td>
@@ -59,7 +59,7 @@ body {
   </tr>
   <tr>
     <td width="20" bgcolor="#666666"><div align="center" class="style6">2</div></td>
-    <td width="155" height="40">&nbsp;</td>
+    <td width="155" height="40"><div align="center"><span class="style4"><a href="2-1-a-&#25105;&#30340;&#35835;&#20070;&#31508;&#35760;-002.htm" target="_blank">生命游戏（下）</a></span></div></td>
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
     <td width="159">&nbsp;</td>
