--- a/index.htm
+++ b/index.htm
@@ -185,13 +185,13 @@ body {
     <td width="155" height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style4"></span></a></div></td>
     <td width="155" height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style4"></span></a></div></td>
     <td width="155" height="40">&nbsp;</td>
-    <td width="155" height="40">&nbsp;</td>
+    <td width="155" height="40"><div align="center" class="style4"><a href="index-&#23567;.htm" target="_blank">手机版</a></div></td>
   </tr>
 </table>
 <p>&nbsp;</p>
 <table width="1600" border="1" align="center">
   <tr>
-    <td width="159" height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style3"></span></a><a href="1-index%20-%20&#20315;&#32463;&#38401;.htm" target="_blank">佛经阁</a></div></td>
+    <td width="159" height="40"><div align="center"><a href="1-index%20-%20&#20315;&#32463;&#38401;.htm" target="_blank" class="style4">佛经阁</a></div></td>
     <td width="159" height="40"><div align="center"><span class="style4"><a href="2-index%20-%20&#35835;&#20070;&#31508;&#35760;.htm" target="_blank">读书笔记</a></span></div></td>
     <td width="159" height="40"><div align="center"><span class="style4"><a href="3-index%20-%20&#30693;&#35782;&#21345;&#29255;.htm" target="_blank">知识卡片</a></span></div></td>
     <td width="159" height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style3"></span></a></div></td>
