--- a/index-小.htm
+++ b/index-小.htm
@@ -10,14 +10,12 @@ body {
 	background-color: #00CC99;
 }
 .style1 {font-size: 36px}
-.style3 {font-size: 20px}
 .style4 {font-size: 18px}
-.style6 {color: #00FF00}
 -->
 </style></head>
 
 <body>
-<p align="center" class="style1"><a href="index.htm" target="_blank">猪猪乐园</a></p>
+<p align="center" class="style1">猪猪乐园</p>
 <table width="600" border="1" align="center">
   <tr bgcolor="#00CCFF">
     <td width="110" height="40"><div align="center" class="style4">我的资源</div></td>
@@ -227,7 +225,7 @@ body {
     <td height="40">&nbsp;</td>
     <td height="40">&nbsp;</td>
     <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
+    <td height="40"><div align="center"><span class="style4"><a href="index.htm">网页版</a></span></div></td>
   </tr>
 </table>
 <p>&nbsp;</p>
